6822263: G1: JVMTI heap iteration fails

Make object_iterate() traverse the perm gen

Reviewed-by: apetrusenko, tonyp